added placeholder photos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="" alt=""/>
+        <img src="https://placebear.com/640/360
+        " alt=""/>
         <nav>
             <a href="">Link 1</a>
             <a href="">Link 2</a>
@@ -22,7 +23,8 @@
             <p>Description of activities</p>
         </section>
         <section>
-            <img src="" alt=""/>
+            <img src="https://placebear.com/640/360
+            " alt=""/>
             <h2>Hiking</h2>
             <ul>
                 <li>Snow Lake</li>
@@ -31,7 +33,8 @@
             </ul>
         </section>
         <section>
-            <img src="" alt=""/>
+            <img src="https://placebear.com/640/360
+            " alt=""/>
             <h2>Kayaking</h2>
             <ul>
                 <li>South Lake Union</li>
@@ -40,7 +43,8 @@
             </ul>
         </section>
         <section>
-            <img src="" alt=""/>
+            <img src="https://placebear.com/640/360
+            " alt=""/>
             <h2>Nightlife</h2>
             <ul>
                 <li>mBar</li>
