--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <a href="">Link 1</a>
             <a href="">Link 2</a>
             <a href="">Link 3</a>
-            <a href="">Link 4</a>
+            <a href="">Christopher</a>
+            <a href="">Cianenry</a>
         </nav>
     </header>
     <main>
