added CS file and replaced a broken image source

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adventures In Seattle</title>
+    <link rel="stylesheet" href="style.css"/> 
 </head>
 <body>
     <header>
-        <img src="https://placebear.com/640/360
+        <img src="https://via.placeholder.com/600x300?text=PH
         " alt=""/>
         <nav>
             <a href="">Link 1</a>
