--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/100x100?text=PH
-        " alt=""/>
+        <img src="https://image.cnbcfm.com/api/v1/image/104540684-GettyImages-530874379.jpg?v=1532563817
+        " alt="picture of seattle" id="image1"/>
         <nav>
             <ul>
                 <li>
@@ -34,7 +34,7 @@
     <main>
         <section>
             <h1>Adventures In Seattle</h1>
-            <p>Description of activities</p>
+            <p>Welcome to Seattle! Whether you like hiking, a day out on the water, or a night out with friends Seattle is the place to be! From hiking to kayaking spend the day in the great outdoors. If the outdoors isn't your calling spend the night at some of the best bars and clubs on the West Coast! </p>
         </section>
         <section>
             <img src="https://placebear.com/640/360
