--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="">
             <h1>Adventures In Seattle</h1>
             <p>Welcome to Seattle! Whether you like hiking, a day out on the water, or a night out with friends Seattle is the place to be! From hiking to kayaking spend the day in the great outdoors. If the outdoors isn't your calling spend the night at some of the best bars and clubs on the West Coast! </p>
         </section>
-        <section>
-            <img src="https://placebear.com/640/360
+        <div class="even-columns">
+
+        <section class="card">
+            <img src="https://via.placeholder.com/100x150
             " alt=""/>
             <h2>Hiking</h2>
             <ul>
@@ -46,8 +48,8 @@
                 <li>Mount Si</li>
             </ul>
         </section>
-        <section>
-            <img src="https://placebear.com/640/360
+        <section class="card">
+            <img src="https://via.placeholder.com/100x150
             " alt=""/>
             <h2>Kayaking</h2>
             <ul>
@@ -56,8 +58,8 @@
                 <li>Alki Beach</li>
             </ul>
         </section>
-        <section>
-            <img src="https://placebear.com/640/360
+        <section class="card">
+            <img src="https://via.placeholder.com/100x150
             " alt=""/>
             <h2>Nightlife</h2>
             <ul>
@@ -66,7 +68,7 @@
                 <li>Bar Harbor</li>
             </ul>
         </section>
-
+    </div>
     </main>
     <footer>
         <p>© Mehtab Riar Codefellows 102</p>
