added all of the links

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <nav>
             <ul>
                 <li>
-            <a href="">Link 1</a>
+            <a href="https://www.alltrails.com/us/washington/seattle">Hiking</a>
                 </li>
                 <li>
-            <a href="">Link 2</a>
+            <a href="https://urbanoutdoors.com/canoeing-kayaking-in-seattle/">Kayaking</a>
                 </li>
                 <li>
-            <a href="">Link 3</a>
+            <a href="https://www.nightflow.com/seattle-nightlife/">Nightlife</a>
         </li>
         <li>
             <a href="">Christopher</a>
         </li>
         <li>
-            <a href="">Cianenry</a>
+            <a href="https://cianedanan.github.io/First-Wireframed-Webpage/">Cianenry</a>
         </li>
             </ul>
         </nav>
