--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <script src="script.js"></script>
         <img src="https://image.cnbcfm.com/api/v1/image/104540684-GettyImages-530874379.jpg?v=1532563817
         " alt="picture of seattle" id="image1"/>
         <nav>
