Added chris's link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="https://www.nightflow.com/seattle-nightlife/">Nightlife</a>
         </li>
         <li>
-            <a href="">Christopher</a>
+            <a href="https://hollistr.github.io/Sugarshack-Sessions/">Christopher</a>
         </li>
         <li>
             <a href="https://cianedanan.github.io/First-Wireframed-Webpage/">Cianenry</a>
