added some prompt boxes and responses

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <script src="script.js"></script>
+        <script>
+            document.write("Hey " + userName + ",Welcome to Seattle!");
+        </script>
         <img src="https://image.cnbcfm.com/api/v1/image/104540684-GettyImages-530874379.jpg?v=1532563817
         " alt="picture of seattle" id="image1"/>
         <nav>
