--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <header>
-        <script src="script.js"></script>
-        <script>
-            document.write("Hey " + userName + ",Welcome to Seattle!");
-        </script>
         <img src="https://image.cnbcfm.com/api/v1/image/104540684-GettyImages-530874379.jpg?v=1532563817
         " alt="picture of seattle" id="image1"/>
         <nav>
@@ -38,7 +34,8 @@
     <main>
         <section class="">
             <h1>Adventures In Seattle</h1>
-            <p>Welcome to Seattle! Whether you like hiking, a day out on the water, or a night out with friends Seattle is the place to be! From hiking to kayaking spend the day in the great outdoors. If the outdoors isn't your calling spend the night at some of the best bars and clubs on the West Coast! </p>
+            <script src="script.js"></script>
+            <p>Whether you like hiking, a day out on the water, or a night out with friends Seattle is the place to be! From hiking to kayaking spend the day in the great outdoors. If the outdoors isn't your calling spend the night at some of the best bars and clubs on the West Coast! </p>
         </section>
         <div class="even-columns">
 
