--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             ask2()
         </script>  
         <p>© Mehtab Riar Codefellows 102</p>
+        <script>
+            ask3()
+        </script>
 
     </footer>
     
